--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -7,12 +7,11 @@ name: Delivery
 
 on:
   push:
-    branches: [ "main" ]
     tags:
       - "*.*.*"
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   publish-release:
