removed unnecessary multiple line command |

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Duplicate README into index.md
-        run: |
-          cp README.md index.md
+        run: cp README.md index.md
       - name: Build
         uses: actions/jekyll-build-pages@v1
       - name: Upload artifact
