Delivery now generates PDFs

--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -21,8 +21,19 @@ jobs:
     - uses: actions/checkout@v4
     - name: Run sbt assembly
       run: sbt assembly
+    - name: Fixing relative paths and copying README.md into docs
+      run: |
+        sed -i '' 's|./docs/|./|g' README.md
+        cp REAMDE.md docs/00_Indice.md
+    - uses: baileyjm02/markdown-to-pdf@v1
+      with:
+        input_dir: docs
+        output_dir: pdfs
+        images_dir: docs/img
+        build_html: false
     - name: Release
       uses: softprops/action-gh-release@v2
       with:
-        files: SGE.jar
-
+        files: |
+          SGE.jar
+          pdfs/*
