fixed sed command

--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -23,7 +23,7 @@ jobs:
       run: sbt assembly
     - name: Fixing relative paths and copying README.md into docs
       run: |
-        sed -i '' 's|./docs/|./|g' README.md
+        sed -i 's|./docs/|./|g' README.md
         cp REAMDE.md docs/00_Indice.md
     - uses: baileyjm02/markdown-to-pdf@v1
       with:
