--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         sources: 'README.md docs/*.md'
     - name: Rename pdf file
-      run: mv ${{ steps.publish-document.outputs.pdf }} "./Documentazione.pdf"
+      run: cp ${{ steps.publish-document.outputs.pdf }} "./Documentazione.pdf"
     - name: Release
       uses: softprops/action-gh-release@v2
       with:
