Now multi-project to also build game jars

--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -36,5 +36,5 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          SGE.jar
+          *.jar
           Documentazione.pdf
