--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -19,6 +19,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
     - name: Run sbt assembly
       run: sbt assembly
     - name: Fixing relative paths and copying README.md into docs
