--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   publish-release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v4
